--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
     "test": "npx cypress verify & cypress run --component"
   },
   "dependencies": {
+    "@prisma/client": "^5.12.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
