--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -27,5 +27,8 @@
     "@types/express": "^4.17.21",
     "prisma": "^5.7.1",
     "tsconfig-paths": "^4.2.0"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
