feat: user register

--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "hooks": {
       "pre-commit": "npx lint-staged"
     }
+  },
+  "dependencies": {
+    "@types/date-fns": "^2.6.0",
+    "date-fns": "^3.6.0"
   }
 }
