--- a/package.json
+++ b/package.json
@@ -32,7 +32,13 @@
     }
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/date-fns": "^2.6.0",
-    "date-fns": "^3.6.0"
+    "@types/dotenv": "^8.2.0",
+    "@types/jsonwebtoken": "^9.0.6",
+    "bcrypt": "^5.1.1",
+    "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2"
   }
 }
