--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "devDependencies": {
     "@commitlint/cli": "^18.4.2",
     "@commitlint/config-conventional": "^18.4.2",
+    "daisyui": "^4.10.2",
     "eslint": "^8.48.0",
     "husky": "^8.0.0",
     "lint-staged": "^15.1.0",
     "prettier": "^3.1.0",
+    "tailwindcss": "^3.4.3",
     "tsconfig": "*",
     "turbo": "latest"
   },
@@ -30,5 +32,13 @@
     "hooks": {
       "pre-commit": "npx lint-staged"
     }
+  },
+  "dependencies": {
+    "@material-tailwind/html": "^2.2.2",
+    "@types/axios": "^0.14.0",
+    "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
+    "react-icons": "^5.2.1",
+    "slick-carousel": "^1.8.1"
   }
 }
