--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "eslint": "^8.48.0",
     "husky": "^8.0.0",
     "lint-staged": "^15.1.0",
-    "prettier": "^3.1.0",
+    "prettier": "^3.2.5",
     "tailwindcss": "^3.4.3",
     "tsconfig": "*",
     "turbo": "latest"
@@ -36,8 +36,10 @@
   "dependencies": {
     "@material-tailwind/html": "^2.2.2",
     "@types/axios": "^0.14.0",
+    "@types/express": "^4.17.21",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
+    "express": "^4.19.2",
     "react-icons": "^5.2.1",
     "slick-carousel": "^1.8.1"
   }
