--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,12 +16,15 @@
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@react-aria/i18n": "^3.11.0",
+    "@types/react-datepicker": "^6.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.378.0",
     "next": "14.0.4",
     "react": "^18",
+    "react-datepicker": "^6.9.0",
     "react-datetime": "^3.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
