--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,9 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@react-aria/i18n": "^3.11.0",
     "@types/react-datepicker": "^6.2.0",
+    "@types/redux": "^3.6.0",
+    "@types/redux-logger": "^3.0.13",
+    "@types/redux-persist": "^4.3.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -30,6 +33,8 @@
     "react-dom": "^18",
     "react-slick": "^0.30.2",
     "react-tailwindcss-datepicker": "^1.6.6",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
