--- a/package.json
+++ b/package.json
@@ -37,31 +37,30 @@
   },
   "dependencies": {
     "@material-tailwind/html": "^2.2.2",
-    "slick-carousel": "^1.8.1",
+    "@reduxjs/toolkit": "^2.2.3",
     "@tanstack/react-query": "^5.35.1",
     "@types/axios": "^0.14.0",
-
     "@types/bcrypt": "^5.0.2",
     "@types/date-fns": "^2.6.0",
     "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.21",
     "@types/express-validator": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.6",
-
-    "@types/express": "^4.17.21",
-
+    "@types/react-redux": "^7.1.33",
+    "@types/redux-persist": "^4.3.1",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "date-fns": "^3.6.0",
-
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "express-validator": "^7.0.1",
     "formik": "^2.4.6",
     "jsonwebtoken": "^9.0.2",
-
-    "express": "^4.19.2",
-
     "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
+    "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
     "yup": "^1.4.0"
   }
 }
